src/components/category/category.styles.scss
   .category__container {
        height: 20rem;
        margin-left: 2rem;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;

        .category__title {
            position: relative;
            top: -3rem;
            color: white;
            font-family: "Roboto";
            margin-left: .5rem;

            @media(min-width: 2000px) {
                top: -10rem;
            }

            @media(min-width: 2200px) {
                top: -15rem;
            }

            @media(min-width: 2400px) {
                top: -25rem;
            }
        }

        .category__content {
            position: relative;
            top: -3.5rem;
            display: flex;
            align-items: center;
            width: 100%;
            height: 18rem;


            @media(min-width: 2000px) {
                top: -10.5rem;
            }

            @media(min-width: 2200px) {
                top: -15rem;
            }

            @media(min-width: 2400px) {
                top: -25rem;
            }
            
    
            .scroll__left {
                position: absolute;
                width: 2rem;
                height: 15rem;
                left: 0;
                color: white;
                display: flex;
                justify-content: center;
                align-items: center;
                transition: opacity .5s;
                z-index: 1;
    
    
                &:hover {
                    cursor: pointer;
                    background-color: rgba(0, 0, 0, .5);
                }
    
                .fas.fa-chevron-left{
                    font-size: 2rem;
                }
            }
    
            .category__items {
                display: flex;
                align-items: center;
                height: 100%;
                width: 100%;
                scroll-behavior: smooth;
                transition: scroll 1s;
                overflow-X: scroll;
                overflow: hidden;
                // -ms-overflow-style: none; /* for Internet Explorer, Edge */
                // scrollbar-width: none; /* for Firefox */
    
                // &::-webkit-scrollbar { 
                //     display: none; /* for Chrome, Safari, and Opera */
                // }
            }
    
            .scroll__right {
                position: absolute;
                width: 2rem;
                right: 0;
                height: 15rem;
                color: white;
                display: flex;
                justify-content: center;
                align-items: center;
                transition: opacity .5s;
                z-index: 1;
                
                &:hover {
                    cursor: pointer;
                    background-color: rgba(0, 0, 0, .5);
                    z-index: 1;
                }
    
                .fas.fa-chevron-right{
                    font-size: 2rem;
                }
                
            }
        }
}

.youtube__container {
    margin: 0 2rem;
    .youtube__video {
        position: relative;
        top: -3.5rem;
        height: 400px;


        @media(min-width: 2000px) {
            top: -10.5rem;
            height: 600px;
        }

        @media(min-width: 2200px) {
            top: -15rem;
            height: 800px;
        }

        @media(min-width: 2400px) {
            top: -20rem;
            height: 900px;
        }
    }
}

